# boa-qt

./: CMakeLists.txt
src/: boamainwin.cpp  boamainwin.hpp  boastuff.cpp  boastuff.hpp  boaview.cpp  boaview.hpp  main.cpp
